# clp

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
examples/: clp_presentation.rs
src/: lib.rs
tests/: integration_test.rs
